# axiom

./: ARCHITECTURE.md  CHANGELOG.md  COMMANDS.md  Cargo.toml  DEVELOPMENT.md  ETL.md  FILES.md  GAPS.md  Makefile  README.md  RELEASE.md  SYSTEM_ARCHITECTURE.md  V0.md  WORKFLOW.md
.cargo/: config.toml
Axiom/: README.md
Axiom/spec/: 00-introduction.md  01-values-and-equality.md  02-syntax-and-grammar.md  03-core-operations.md  04-enrichment.md  05-pic-codecs.md  06-errors.md  07-conformance-suite.md  08-implementation-notes.md  AXIOM_CORE.md  AXIOM_DOCTRINE.md  ENR1.md  ENR2.md  ENR_CORE.md  ENR_DOCTRINE.md  ENR_PLUS.md
SDA/: CHEATSHEET.md  DOCTRINE.md  FOR_JQ_USERS.md  IMPLEMENTATION_AUDIT.md  JSON_FILTER_DEMO.md  Makefile  NOTES.md  SDA_GRAMMAR.md  SDA_SPEC.md  USER_MANUAL.md  sda.grit  smoke.sda  unicode_pack.grit  unicode_smoke.sda
SDA/examples/getting_started/: person.json  person_name.sda  person_summary.sda
SDA/sda/: README.md
crates/axiom-cli/: Cargo.toml
crates/axiom-cli/src/: main.rs
crates/enr-cli/: Cargo.toml
crates/enr-cli/src/: main.rs
crates/enr-core/: Cargo.toml
crates/enr-core/src/: lib.rs
crates/sda-cli/: Cargo.toml  README.md  build.rs
crates/sda-cli/src/: main.rs
crates/sda-cli/tests/: cli.rs
crates/sda-core/: Cargo.toml  README.md
crates/sda-core/src/: ast.rs  eval.rs  format.rs  lexer.rs  lib.rs  number.rs  parser.rs  stdlib.rs
crates/sda-core/tests/: sda_conformance.rs
crates/shape-cli/: Cargo.toml
crates/shape-cli/src/: main.rs
crates/shape-core/: Cargo.toml
crates/shape-core/src/: lib.rs
docs/: SDA.html
