[workspace]
members = [
  "crates/axiom-cli",
  "crates/enr-cli",
  "crates/enr-core",
  "crates/sda-cli",
  "crates/sda-core",
  "crates/shape-cli",
  "crates/shape-core",
]
resolver = "3"

[workspace.package]
version = "1.0.1"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Alexander R. Croft"]
repository = "https://github.com/frogfishio/axiom"

[workspace.dependencies]
sda-core = { package = "sda-lib", version = "1.0.1", path = "crates/sda-core" }
enr-core = { path = "crates/enr-core" }
shape-core = { path = "crates/shape-core" }
serde_json = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
