[package]
name = "sda-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde_json.workspace = true
thiserror.workspace = true
num-bigint.workspace = true
num-rational.workspace = true
num-traits.workspace = true
